# SEKURO_TUGAS_1_Agatha-Tatianingseto_PROGRAMMING

./: README.md
src/oop_soal_1/: core_mcu.cpp  core_mcu.hpp
src/oop_soal_1_alternatif/: mobil.cpp  mobil.hpp
src/oop_soal_2/: CMakeLists.txt
src/oop_soal_2/include/: mcu.hpp  mcu_cam_controller.hpp  mcu_walker.hpp
src/oop_soal_2/src/: main.cpp  mcu.cpp  mcu_cam_controller.cpp  mcu_walker.cpp
src/ros_soal_1/: CMakeLists.txt  package.xml
src/ros_soal_1/launch/: sensor_launch.py
src/ros_soal_1/src/: sensor_publisher.py  sensor_subscriber.py
src/soal_cmake/: CMakeLists.txt
src/stl_soal/: Robot_Gudang.cpp
